Fixing spacing unit in spacing utility

--- a/generators/app/templates/styles/itcss/utilities/_utilities.spacing.scss
+++ b/generators/app/templates/styles/itcss/utilities/_utilities.spacing.scss
@@ -3,7 +3,7 @@
    @todo generate more generic classes and sizes
    ========================================================================== */
 
-$utility-spacing: 1rem;
+$utility-spacing: 1em;
 
 .u-margin {
   margin: $utility-spacing;
